--- a/theme/templates/pages/site-wide-modals.html
+++ b/theme/templates/pages/site-wide-modals.html
@@ -13,7 +13,7 @@
                     <div class="modal-input-title">Enter the title for the new resource.
                     </div>
                     <br>
-                    <input class="form-control textinput textInput" maxlength="300"
+                    <input id="input-title" class="form-control textinput textInput" maxlength="300"
                            name="value" type="text" placeholder="Resource Title" value="">
                 </div>
             </div>
