--- a/theme/templates/resource-landing-page/manage-access.html
+++ b/theme/templates/resource-landing-page/manage-access.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="manage-access">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content" :style="{'pointer-events': isProcessing ? 'none' : 'auto' }">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"
                         aria-hidden="true">&times;</button>
@@ -50,7 +50,7 @@
                         <h3 class="panel-title">Who has access</h3>
                     </div>
                     <div class="panel-body panel-access ">
-                        <table class="table access-table">
+                        <table class="table access-table" :style="{'pointer-events': isProcessing ? 'none' : 'auto' }">
                             <tbody>
                                 {% include "includes/access-row2.html" %}
                             </tbody>
