--- a/theme/templates/includes/access-row2.html
+++ b/theme/templates/includes/access-row2.html
@@ -58,16 +58,16 @@
 
             <ul class="dropdown-menu" aria-labelledby="roles-menu">
                 <li :class="{ active : user.access === 'view' }" data-access-type="Can view">
-                    <a @click="changeAccess(user, index, 'view')">Can view</a>
+                    <a @click="currentUser === user.id && user.access === 'owner' ? showPermissionDialog(user, index, 'view'): changeAccess(user, index, 'view')">Can view</a>
                 </li>
                 <li :class="{ active : user.access === 'edit', disabled: selfAccessLevel != 'owner' && selfAccessLevel != 'edit' }"
                     data-access-type="edit">
-                    <a @click="changeAccess(user, index, 'edit')">Can edit</a>
+                    <a @click="currentUser === user.id && user.access === 'owner' ? showPermissionDialog(user, index, 'edit'): changeAccess(user, index, 'edit')">Can edit</a>
                 </li>
                 <li v-if="user.user_type === 'user'"
                     :class="{ active: user.access === 'owner', disabled: !canChangeResourceFlags}"
                     data-access-type="Is owner">
-                    <a @click="changeAccess(user, index, 'owner')">Is owner</a>
+                    <a @click="currentUser === user.id && user.access === 'owner' ? showPermissionDialog(user, index, 'owner'): changeAccess(user, index, 'owner')">Is owner</a>
                 </li>
             </ul>
         </span>
