Remove obsolete code and files Minor bug fixes when changing group access

--- a/theme/templates/resource-landing-page/manage-access.html
+++ b/theme/templates/resource-landing-page/manage-access.html
@@ -52,7 +52,7 @@
                     <div class="panel-body panel-access ">
                         <table class="table access-table" :style="{'pointer-events': isProcessing ? 'none' : 'auto' }">
                             <tbody>
-                                {% include "includes/access-row2.html" %}
+                                {% include "includes/access-row.html" %}
                             </tbody>
                         </table>
                     </div>
