Remove obsolete code

--- a/theme/templates/resource-landing-page/manage-access.html
+++ b/theme/templates/resource-landing-page/manage-access.html
@@ -247,7 +247,7 @@
             </div>
 
             <div class="modal-footer">
-                <a type="button" data-dismiss="modal" class="btn btn-default" onClick="window.location.reload();">Close</a>
+                <a type="button" data-dismiss="modal" class="btn btn-default">Close</a>
             </div>
         </div>
     </div>
