--- a/theme/templates/resource-landing-page/manage-access.html
+++ b/theme/templates/resource-landing-page/manage-access.html
@@ -157,44 +157,44 @@
                                 view this resource.
                             </div>
 
-                            {% if can_change_resource_flags %}
-                                {# -------- PUBLIC -------- #}
-                                <form id="form-change-access" class="disabled"
-                                      action="/hsapi/_internal/{{ cm.short_id }}/set-resource-flag/"
-                                      method="POST">
-                                    <div class="btn-group" role="group">
-                                        {% csrf_token %}
-                                        <input name="flag" type="hidden" value=""/>
-                                        <input name="resource-mode" type="hidden" value="{{ resource_mode }}">
+                            <template v-if="canChangeResourceFlags">
+                                <div class="btn-group" role="group">
+                                    {# -------- PUBLIC -------- #}
+                                    <button
+                                        :disabled="!canBePublicDiscoverable || resAccess.isPublic || isProcessingAccess"
+                                        @click="setResourceAccess('make_public')"
+                                        :class="{active: resAccess.isPublic}"
+                                        class="btn btn-default"
+                                        id="btn-public" data-toggle="tooltip" data-placement="auto"
+                                        data-flag="make_public"
+                                        title='Can be viewed and downloaded by anyone.' type="button">
+                                        Public
+                                    </button>
 
-                                        <button {% if not cm.can_be_public_or_discoverable or cm.raccess.public %}disabled {% endif %}
-                                                id="btn-public" data-toggle="tooltip" data-placement="auto"
-                                                data-flag="make_public"
-                                                title='Can be viewed and downloaded by anyone.' type="button"
-                                                class="btn btn-default {% if cm.raccess.public %}active{% endif %}">
-                                            Public
-                                        </button>
+                                    {# -------- DISCOVERABLE -------- #}
+                                    <button :disabled="!canBePublicDiscoverable || isProcessingAccess"
+                                            @click="setResourceAccess('make_discoverable')"
+                                            :class="{active: resAccess.isDiscoverable && !resAccess.isPublic}"
+                                            class="btn btn-default"
+                                            id="btn-discoverable" data-toggle="tooltip" data-placement="auto"
+                                            data-flag="make_discoverable"
+                                            type="button" title='Metadata is public but data are protected.'>
+                                        Discoverable
+                                    </button>
 
-                                        {# -------- DISCOVERABLE -------- #}
-                                        <button {% if not cm.can_be_public_or_discoverable %}disabled {% endif %}
-                                                id="btn-discoverable" data-toggle="tooltip" data-placement="auto"
-                                                data-flag="make_discoverable"
-                                                type="button" title='Metadata is public but data are protected.'
-                                                class="btn btn-default {% if cm.raccess.discoverable and not cm.raccess.public %}active{% endif %}">
-                                            Discoverable
-                                        </button>
-
-                                        {# -------- PRIVATE -------- #}
-                                        <button {% if not cm.raccess.public and not cm.raccess.discoverable %}disabled {% endif %}
-                                                id="btn-private" data-toggle="tooltip" data-placement="auto"
-                                                data-flag="make_private"
-                                                title='Can be viewed and downloaded only by designated users or research groups.'
-                                                type="button"
-                                                class="btn btn-default {% if not cm.raccess.public and not cm.raccess.discoverable %}active{% endif %}">
-                                            Private
-                                        </button>
-                                    </div>
-                                </form>
+                                    {# -------- PRIVATE -------- #}
+                                    <button
+                                        :disabled="!resAccess.isPublic && !resAccess.isDiscoverable || isProcessingAccess"
+                                        @click="setResourceAccess('make_private')"
+                                        :class="{active: !resAccess.isPublic && !resAccess.isDiscoverable}"
+                                        class="btn btn-default"
+                                        id="btn-private" data-toggle="tooltip" data-placement="auto"
+                                        data-flag="make_private"
+                                        title='Can be viewed and downloaded only by designated users or research groups.'
+                                        type="button">
+                                        Private
+                                    </button>
+                                </div>
 
                                 {% if self_access_level == 'owner' and cm.resource_type == "NetcdfResource" and not cm.raccess.public %}
                                     <div class="label-public">Note that making the resource public may take a little extra time
@@ -234,7 +234,7 @@
                                     </div>
                                     <br>
                                 {% endif %}
-                            {% endif %}
+                            </template>
                          </div>
                     </div>
                 </div>
