--- a/theme/templates/includes/access-row.html
+++ b/theme/templates/includes/access-row.html
@@ -56,15 +56,15 @@
             </span>
 
             <ul class="dropdown-menu" aria-labelledby="roles-menu">
-                <li :class="{ active : user.access === 'view', disabled: user.access === 'none'}">
-                    <a @click="currentUser === user.id && user.access === 'owner' ? showPermissionDialog(user, index, 'view'): changeAccess(user, index, 'view')">Can view</a>
+                <li :class="getUserDropdownItemClass(user, 'view')">
+                    <a @click="onChangeAccess(user, index, 'view')">Can view</a>
                 </li>
-                <li :class="{ active : user.access === 'edit', disabled: selfAccessLevel != 'owner' && selfAccessLevel != 'edit' }">
-                    <a @click="currentUser === user.id && user.access === 'owner' ? showPermissionDialog(user, index, 'edit'): changeAccess(user, index, 'edit')">Can edit</a>
+                <li :class="getUserDropdownItemClass(user, 'edit')">
+                    <a @click="onChangeAccess(user, index, 'edit')">Can edit</a>
                 </li>
                 <li v-if="user.user_type === 'user'"
-                    :class="{ active: user.access === 'owner', disabled: !canChangeResourceFlags || selfAccessLevel !== 'owner'}">
-                    <a @click="currentUser === user.id && user.access === 'owner' ? showPermissionDialog(user, index, 'owner'): changeAccess(user, index, 'owner')">Is owner</a>
+                    :class="getUserDropdownItemClass(user, 'owner')">
+                    <a @click="onChangeAccess(user, index, 'owner')">Is owner</a>
                 </li>
             </ul>
         </span>
