--- a/theme/templates/resource-landing-page/manage-access.html
+++ b/theme/templates/resource-landing-page/manage-access.html
@@ -239,4 +239,4 @@
     </div>
 </div>
 
-<script type="text/javascript" src="{{ STATIC_URL }}js/hs-vue/manage-access.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/hs-vue/manage-access-app.js"></script>
