Remove unused Id property

--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -33,7 +33,7 @@
                 </ul>
             </div>
             <div>
-                <p class="text-danger small" id="id-keywords-msg" v-if="showIsDuplicate"> Duplicate. Keyword not added.</p>
+                <p class="text-danger small" v-if="showIsDuplicate"> Duplicate. Keyword not added.</p>
                 <div v-if="error" class='alert alert-danger space-top small'>
                     <strong>Error: </strong>${ error }
                 </div>
